[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
#async-std = "1.10.0"
chrono = "0.4.19"
reqwest = { version = "0.11.9", features = ["blocking", "stream"] }
async-std = { version = "1.10.0", features = ["tokio1"] }
bytes = "1.1.0"